# Developer-shell

./: .gitignore  CMakeLists.txt  compile_commands.json
include/: builtins.h  command.h  parser.h  registry.h  shell.h
src/: builtins.cpp  main.cpp  parser.cpp  registry.cpp
